--- a/Web Test.html
+++ b/Web Test.html
@@ -21,7 +21,7 @@
    <a href="https://html.spec.whatwg.org/">HTML官网</a>
    <hr>
    <a href="https://code.visualstudio.com"><i>Coded by Visual Studios Code</i></a><br>
-<script>
+   <script>
 function myFunction()
 {
    x=document.getElementById("demo");
@@ -44,5 +44,18 @@ function myFunction()
     }
     </script>
     <img id="myimage" onclick="changeImage()" src="https://www.runoob.com/images/pic_bulboff.gif" width="100" height="180">
+    <p><input id="demo" type="number">
+    <script>
+        function myFunction()
+        {
+            var x=document.getElementById("demo").value;
+            if(x==""||isNaN(x))
+            {
+                alert("Not Words");
+            }
+        }
+        </script>
+        <button type="button" onclick="myFunction()">Click</button>
+    </p>
 </body>  
 <html>
